--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,11 +1,12 @@
 modLoader="javafml"
-loaderVersion="[24,]"
+loaderVersion="[28,]"
 logoFile="logo.png"
 authors="Pugz"
+credits="*Endergized*, Farcr, Rohan, László Gaming, ʟᴇᴍᴏɴ, Wolftopia, ilja615, Ønelix, Kicsivazz, Axoladdy, TitaniumBrain"
 
 [[mods]]
     modId="bambooblocks"
-    version="1.2.2"
+    version="1.2.3"
     displayName="Bamboo Blocks"
     description='''
     Fun Bamboo Blocks to build with!
