--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,5 @@
 public net.minecraft.block.StairsBlock <init>(Lnet/minecraft/block/BlockState;Lnet/minecraft/block/Block$Properties;)V #StairsBlock
 public net.minecraft.block.DoorBlock <init>(Lnet/minecraft/block/Block$Properties;)V # DoorBlock
 public net.minecraft.block.TrapDoorBlock <init>(Lnet/minecraft/block/Block$Properties;)V # TrapDoorBlock
+
+protected net.minecraft.entity.item.BoatEntity func_184447_s()V # tickLerp
