--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -2,7 +2,7 @@ modLoader="javafml"
 loaderVersion="[28,]"
 logoFile="logo.png"
 authors="Pugz"
-credits="*Endergized*, Farcr, Rohan, László Gaming, ʟᴇᴍᴏɴ, Wolftopia, ilja615, Ønelix, Kicsivazz, Axoladdy, TitaniumBrain"
+credits="*Endergized*, Farcr, Rohan, László Gaming, ʟᴇᴍᴏɴ, Wolftopia, ilja615, Ønelix, Kicsivazz, Axoladdy, TitaniumBrain, and qsefthuopq"
 
 [[mods]]
     modId="bambooblocks"
