bugfixes and server changes
-removed bamboo chests for now
-renamed vertical bamboo planks to horizontal
-updated tags

--- a/src/main/resources/data/bambooblocks/recipes/trapped_bamboo_chest.json
+++ b/src/main/resources/data/bambooblocks/recipes/trapped_bamboo_chest.json
@@ -10,5 +10,11 @@
   ],
   "result": {
     "item": "bambooblocks:trapped_bamboo_chest"
-  }
+  },
+  "conditions": [
+    {
+      "type": "quark:flag",
+      "flag": "variant_chests"
+    }
+  ]
 }
