--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ credits="*Endergized*, Farcr, Rohan, László Gaming, ʟᴇᴍᴏɴ, Wolftopia, 
 
 [[mods]]
     modId="bambooblocks"
-    version="1.2.9"
+    version="1.2.9b"
     displayName="Bamboo Blocks"
     description='''
     Fun Bamboo Blocks to build with!
