--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,16 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
+plugins {
+  id "com.wynprice.cursemaven" version "2.1.1"
+}
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.3'
+version = '1.4.0'
 group = 'com.pugz.bambooblocks'
-archivesBaseName = 'bambooblocks-1.15.2'
+archivesBaseName = 'Bamboo-Blocks-1.15.2'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
@@ -58,4 +61,5 @@ minecraft {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.15.2-31.1.30'
+    compile fg.deobf("curse.maven:abnormals-core:2957733")
 }
