--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,8 +6,15 @@ credits="*Endergized*, Farcr, Rohan, László Gaming, ʟᴇᴍᴏɴ, Wolftopia, 
 
 [[mods]]
     modId="bambooblocks"
-    version="1.2.11"
+    version="1.3"
     displayName="Bamboo Blocks"
     description='''
     Fun Bamboo Blocks to build with!
     '''
+
+[[dependencies.bambooblocks]]
+    modId="abnormals_core"
+    mandatory=true
+    versionRange="[1.0.3,)"
+    ordering="AFTER"
+    side="BOTH"
