--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.4.0'
+version = 'v1.4.0'
 group = 'com.pugz.bambooblocks'
 archivesBaseName = 'Bamboo-Blocks-1.15.2'
 
@@ -61,5 +61,5 @@ minecraft {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.15.2-31.1.30'
-    compile fg.deobf("curse.maven:abnormals-core:2957733")
+    compile fg.deobf("curse.maven:abnormals-core:2957837")
 }
