--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -2,20 +2,19 @@ modLoader="javafml"
 loaderVersion="[31,]"
 logoFile="logo.png"
 authors="Pugz & bageldotjpg"
-credits="*Endergized*, Farcr, Rohan, László Gaming, ʟᴇᴍᴏɴ, Wolftopia, ilja615, Ønelix, Kicsivazz, Axoladdy, TitaniumBrain, and qsefthuopq"
+credits="*Endergized*"
 
 [[mods]]
     modId="bambooblocks"
-    version="1.4.0"
+    version="${file.jarVersion}"
     displayName="Bamboo Blocks"
     description='''
-    Fun Bamboo Blocks to build with!
-    '''
+    Fun Bamboo Blocks to build with!'''
 
 [[dependencies.bambooblocks]]
     modId="forge"
     mandatory=true
-    versionRange="[31.1.49,)"
+    versionRange="[31.1.46,)"
     ordering="NONE"
     side="BOTH"
 
@@ -29,6 +28,6 @@ credits="*Endergized*, Farcr, Rohan, László Gaming, ʟᴇᴍᴏɴ, Wolftopia, 
 [[dependencies.bambooblocks]]
     modId="abnormals_core"
     mandatory=true
-    versionRange="[1.0.4,)"
+    versionRange="[1.0.6,)"
     ordering="AFTER"
     side="BOTH"
