--- a/src/main/resources/assets/bamboo_blocks/blockstates/bamboo_trapped_chest.json
+++ b/src/main/resources/assets/bamboo_blocks/blockstates/bamboo_trapped_chest.json
@@ -1,5 +1,5 @@
 {
     "variants": {
-        "": { "model": "upgrade_aquatic:block/river_chest" }
+        "": { "model": "bamboo_blocks:block/bamboo_chest" }
     }
 }
