--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,8 +1,8 @@
 modLoader="javafml"
 loaderVersion="[32,]"
 logoFile="logo.png"
-authors="bageldotjpg"
-credits="Pugz & Endergized"
+authors="bageldotjpg & Endergized"
+credits="Pugz & Farcr"
 
 [[mods]]
     modId="bamboo_blocks"
@@ -14,20 +14,20 @@ credits="Pugz & Endergized"
 [[dependencies.bamboo_blocks]]
     modId="forge"
     mandatory=true
-    versionRange="[32.0.47,)"
+    versionRange="[32.0.88,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.bamboo_blocks]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.1,)"
+    versionRange="[1.16.1]"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.bamboo_blocks]]
     modId="abnormals_core"
     mandatory=true
-    versionRange="[2.0.0,)"
+    versionRange="[2.1.0,)"
     ordering="AFTER"
     side="BOTH"
