--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,21 +1,22 @@
 modLoader="javafml"
-loaderVersion="[32,]"
-logoFile="logo.png"
-authors="bageldotjpg & Endergized"
-credits="Pugz & Farcr"
+loaderVersion="[32,)"
 license="https://github.com/minecraftabnormals/Bamboo-Blocks/blob/master/LICENSE.txt"
+issueTrackerURL="https://github.com/minecraftabnormals/Bamboo-Blocks/issues"
 
 [[mods]]
+    logoFile="logo.png"
     modId="bamboo_blocks"
     version="${file.jarVersion}"
+    authors="bageldotjpg & Endergized"
+    credits="Pugz & Farcr"
     displayName="Bamboo Blocks"
-    description='''
-    Fun Bamboo Blocks to build with!'''
+    description='''Fun Bamboo Blocks to build with!'''
+
 
 [[dependencies.bamboo_blocks]]
     modId="forge"
     mandatory=true
-    versionRange="[32.0.88,)"
+    versionRange="[32.0.72,)"
     ordering="NONE"
     side="BOTH"
 
@@ -29,6 +30,6 @@ license="https://github.com/minecraftabnormals/Bamboo-Blocks/blob/master/LICENSE
 [[dependencies.bamboo_blocks]]
     modId="abnormals_core"
     mandatory=true
-    versionRange="[2.1.0,)"
+    versionRange="[2.0.1,)"
     ordering="AFTER"
     side="BOTH"
