--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,16 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
+
 plugins {
   id "com.wynprice.cursemaven" version "2.1.1"
 }
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '2.0.1'
+version = '2.1.0'
 group = 'com.minecraftabnormals'
 archivesBaseName = 'Bamboo-Blocks-1.16.1'
 
@@ -24,29 +26,34 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 minecraft {
     mappings channel: 'snapshot', version: '20200723-1.16.1'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
     runs {
         client {
-            workingDirectory project.file('run')
+            workingDirectory project.file('run/client')
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'debug'
+            property "mixin.env.disableRefMap", "true"
             mods {
                 bamboo_blocks {
                     source sourceSets.main
                 }
             }
         }
+
         server {
-            workingDirectory project.file('run')
+            workingDirectory project.file('run/server')
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'debug'
+            property "mixin.env.disableRefMap", "true"
             mods {
                 bamboo_blocks {
                     source sourceSets.main
                 }
             }
         }
+
         data {
-            workingDirectory project.file('run')
+            workingDirectory project.file('run/data')
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
             property 'forge.logging.console.level', 'debug'
             args '--mod', 'bamboo_blocks', '--all', '--output', file('src/generated/resources/')
@@ -68,12 +75,12 @@ jar {
     manifest {
         attributes([
         	"Specification-Title": "Bamboo Blocks",
-          "Specification-Vendor": "Team Abnormals",
-          "Specification-Version": "1",
-          "Implementation-Title": project.name,
-          "Implementation-Version": "${version}",
-          "Implementation-Vendor": "Team Abnormals",
-          "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+            "Specification-Vendor": "Team Abnormals",
+            "Specification-Version": "1",
+            "Implementation-Title": project.name,
+            "Implementation-Version": "${version}",
+            "Implementation-Vendor": "Team Abnormals",
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
         ])
     }
 }
