--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,8 @@ minecraft {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.1-32.0.72'
-    implementation fg.deobf("curse.maven:abnormals-core:3017821")
+    implementation fg.deobf("curse.maven:abnormals-core:3104181")
+    implementation fg.deobf("curse.maven:endergetic:3075871")
 }
 
 jar {
