--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,31 +4,33 @@ issueTrackerURL = "https://github.com/team-abnormals/bamboo-blocks/issues"
 license = "https://github.com/team-abnormals/bamboo-blocks/blob/main/LICENSE.txt"
 
 [[mods]]
-logoFile = "logo.png"
-modId = "bamboo_blocks"
-version = "${file.jarVersion}"
-authors = "bageldotjpg & Endergized"
-credits = "Pugz & Farcr"
-displayName = "Bamboo Blocks"
-description = '''Fun Bamboo Blocks to build with!'''
+    logoFile = "logo.png"
+    modId = "bamboo_blocks"
+    version = "${file.jarVersion}"
+    authors = "Team Abnormals"
+    credits = "Endergized, bageldotjpg, Farcr"
+    displayName = "Bamboo Blocks"
+    description = '''
+    Fun Bamboo Blocks to build with!
+    '''
 
 [[dependencies.bamboo_blocks]]
-modId = "forge"
-mandatory = true
-versionRange = "[32.0.72,)"
-ordering = "NONE"
-side = "BOTH"
+    modId = "forge"
+    mandatory = true
+    versionRange = "[32.0.72,)"
+    ordering = "NONE"
+    side = "BOTH"
 
 [[dependencies.bamboo_blocks]]
-modId = "minecraft"
-mandatory = true
-versionRange = "[1.16.1]"
-ordering = "NONE"
-side = "BOTH"
+    modId = "minecraft"
+    mandatory = true
+    versionRange = "[1.16.1]"
+    ordering = "NONE"
+    side = "BOTH"
 
 [[dependencies.bamboo_blocks]]
-modId = "abnormals_core"
-mandatory = true
-versionRange = "[2.0.1,)"
-ordering = "AFTER"
-side = "BOTH"
+    modId = "abnormals_core"
+    mandatory = true
+    versionRange = "[2.0.1,)"
+    ordering = "AFTER"
+    side = "BOTH"
