--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,30 +7,33 @@ license = "https://github.com/team-abnormals/bamboo-blocks/blob/main/LICENSE.txt
     modId = "bamboo_blocks"
     version = "${file.jarVersion}"
     logoFile = "logo.png"
+    itemIcon = "minecraft:bamboo"
+    configBackground = "bamboo_blocks:textures/block/bamboo_planks.png"
     authors = "Team Abnormals"
     credits = "Endergized, bageldotjpg, Farcr"
+    displayURL = "https://www.teamabnormals.com/mods/bamboo-blocks"
     displayName = "Bamboo Blocks"
     description = '''
-    Fun Bamboo Blocks to build with!
+    Introduces fun bamboo-themed blocks to build with!
     '''
+
+[[dependencies.bamboo_blocks]]
+    modId = "minecraft"
+    mandatory = true
+    versionRange = "[1.16.5,1.17)"
+    ordering = "NONE"
+    side = "BOTH"
 
 [[dependencies.bamboo_blocks]]
     modId = "forge"
     mandatory = true
-    versionRange = "[32.0.72,)"
+    versionRange = "[36.2.0,)"
     ordering = "NONE"
     side = "BOTH"
 
 [[dependencies.bamboo_blocks]]
     modId = "abnormals_core"
     mandatory = true
-    versionRange = "[2.0.6,)"
+    versionRange = "[3.2.0,)"
     ordering = "AFTER"
-    side = "BOTH"
-
-[[dependencies.bamboo_blocks]]
-    modId = "minecraft"
-    mandatory = true
-    versionRange = "[1.16.1]"
-    ordering = "NONE"
     side = "BOTH"
